# fastapi-microservice

./: .env  .ignorefile  Dockerfile  README.md  docker-compose.yml  otel-collector-config.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  db.py  dependencies.py  main.py
app/caching/: redis_cache.py
app/events/: consumer.py  rabbitmq.py
app/instrumentation/: tracing.py
app/models/: api_keys.py  user_profile.py  users.py
app/routers/: auth.py  protected_permissions.py  protected_roles.py  protected_user.py
app/schemas/: permissions.py  roles.py  user.py
app/services/: auth_service.py  permissions_service.py  roles_service.py  user_service.py
app/utils/: constant.py  env.py  jw_utils.py  logger.py
tests/: test_conf.py  test_users.py
